--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/App.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/App.xaml
@@ -137,7 +137,7 @@
                                                 <primitives:CaptionButtons Margin="0,0,5,0" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right" Type="Close"
                                                                          Foreground="{DynamicResource CaptionButtonColor}" FontSize="14" MarginButton="0,0,5,0"
                                                                          VerticalAlignment="Center" shell:WindowChrome.IsHitTestVisibleInChrome="True"
-                                                                         x:Name="CaptionButtons"/>
+                                                                         Visibility="{TemplateBinding CloseButtonVisibility}"/>
 
                                                 <ContentPresenter Margin="5" Grid.Row="1" Grid.ColumnSpan="3" Content="{TemplateBinding Content}"/>
                                             </Grid>
