--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/ProgressDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/ProgressDialog.xaml
@@ -1,4 +1,4 @@
-﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.MigrationProgressDialog"
+﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.ProgressDialog"
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                        xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
@@ -6,7 +6,7 @@
                        lex:LocalizeDictionary.DesignCulture="en-US"
                        lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
                        lex:ResxLocalizationProvider.DefaultDictionary="Resources"
-                       Width="450" Title="{Binding ProgressValue, StringFormat={lex:LocText MigrationProgressdialogTitle}}">
+                       Width="450" Title="{Binding ProgressDialogTitle}">
     <primitives:DialogBase.TaskbarItemInfo>
         <TaskbarItemInfo ProgressValue="{Binding ProgressValueDouble}"/>
     </primitives:DialogBase.TaskbarItemInfo>
@@ -16,7 +16,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <TextBlock Text="{lex:LocText MigrationProgressMessage}" Margin="0,0,0,5" TextWrapping="Wrap" Width="320" HorizontalAlignment="Left"/>
-        <ProgressBar Grid.Row="1" Minimum="0" Maximum="100" Value="{Binding ProgressValue, Mode=OneWay}" Height="16"/>
+        <TextBlock Text="{Binding ProgressMessage}" Margin="0,0,0,5" TextWrapping="Wrap" Width="320" HorizontalAlignment="Left"/>
+        <ProgressBar Grid.Row="1" Minimum="0" Maximum="100" Value="{Binding ProgressValue, Mode=OneWay}" Height="16" IsIndeterminate="{Binding IsIndetermine}"/>
     </Grid>
 </primitives:DialogBase>
