--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/SettingsWindow.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/SettingsWindow.xaml
@@ -102,6 +102,7 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
                     <CheckBox Grid.Row="0" Grid.ColumnSpan="2" Content="{lex:LocText CheckForNewerVersionOnStartup}"
@@ -110,13 +111,16 @@
                     <CheckBox Grid.Row="1" Grid.ColumnSpan="2" Content="{lex:LocText VerifyFileHashAfterFtpUpload}"
                               Padding="5,0,0,0" IsChecked="{Binding VerifyFileHashAfterFtpUpload}" Margin="0,0,0,5" />
 
-                    <CheckBox Grid.Row="2" Grid.ColumnSpan="2" Content="{lex:LocText UseRemoteCopy}"
+                    <Image Grid.Row="2" Source="/Resources/info.png" Margin="20,10,5,0" VerticalAlignment="Top" />
+                    <TextBlock Grid.Row="2" Grid.Column="1" TextWrapping="Wrap" Margin="0,10,0,10" Text="{lex:LocText VerifyFileHashAfterFtpUploadRemarks}" />
+
+                    <CheckBox Grid.Row="3" Grid.ColumnSpan="2" Content="{lex:LocText UseRemoteCopy}"
                               Padding="5,0,0,0" IsChecked="{Binding UseRemoteCopy}" />
 
-                    <Image Grid.Row="3" Source="/Resources/info.png" Margin="20,10,5,0" VerticalAlignment="Top" />
-                    <TextBlock Grid.Row="3" Grid.Column="1" TextWrapping="Wrap" Margin="0,10,0,10" Text="{lex:LocText UseRemoteCopyRemarks}" />
+                    <Image Grid.Row="4" Source="/Resources/info.png" Margin="20,10,5,0" VerticalAlignment="Top" />
+                    <TextBlock Grid.Row="4" Grid.Column="1" TextWrapping="Wrap" Margin="0,10,0,10" Text="{lex:LocText UseRemoteCopyRemarks}" />
 
-                    <DockPanel Grid.Row="4" Grid.ColumnSpan="2">
+                    <DockPanel Grid.Row="5" Grid.ColumnSpan="2">
                         <ComboBox DockPanel.Dock="Right" ItemsSource="{Binding FsdContentScanTriggerOptions}"
                                   SelectedItem="{Binding FsdContentScanTrigger}" VerticalAlignment="Center">
                             <ComboBox.ItemTemplate>
