--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TransferProgressDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TransferProgressDialog.xaml
@@ -40,6 +40,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0" Margin="0,0,0,5">
@@ -92,8 +93,11 @@
                 </TextBlock.Text>
             </TextBlock>
         </DockPanel>
+        
+        <CheckBox Grid.Row="5" Visibility="{Binding IsVerificationSupported, Converter={StaticResource BoolToVis}}"
+                  IsChecked="{Binding IsVerificationEnabled}" Content="{lex:Loc VerifyFileHashAfterFtpUpload}"/>
 
-        <StackPanel Grid.Row="5" HorizontalAlignment="Right" Orientation="Horizontal">
+        <StackPanel Grid.Row="6" HorizontalAlignment="Right" Orientation="Horizontal">
             <Button Width="75" Content="{lex:LocText Pause}" Command="{Binding PauseCommand}" Margin="0,0,5,0" 
                     Visibility="{Binding Path=IsPaused, Converter={StaticResource BoolToVis}, ConverterParameter=True}" 
                     IsEnabled="{Binding Path=TargetPane.IsResumeSupported}" />
