--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/IoErrorDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/IoErrorDialog.xaml
@@ -6,7 +6,7 @@
                        lex:LocalizeDictionary.DesignCulture="hu"
                        lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
                        lex:ResxLocalizationProvider.DefaultDictionary="Resources"
-                       MinWidth="400" Title="{lex:LocText IOError}">
+                       MinWidth="400" MaxWidth="800" Title="{lex:LocText IOError}">
     <Grid x:Name="LayoutRoot">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
